# co-think-agent

./: .gitignore  README.md  app.py  main.py  pyproject.toml  strategy_report.pptx
src/: config.py  edges.py  graph.py  llm.py  logger.py  node.py  prompt.py  settings.py  state.py  test.py  tool.py
src/nodes/: __init__.py  cross_silo.py  evaluation.py  file_export.py  final_summary.py  hmw.py  refine_ask.py  reflection.py  situation.py  summary.py
