[project]
name = "agent"
version = "0.0.1"
description = "Co-thinking agent "
authors = [
    { name = "Annie Huang", email = "r11528050@g.ntu.edu.tw" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.0.0",
    "python-dotenv>=1.0.1",
    "langchain-core>=0.3.0",
    "langchain-openai>=1.1.6",
    "python-pptx>=1.0.2",
    "streamlit>=1.30.0",
    "nest-asyncio>=1.5.6",
    
]

